--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "next": "15.1.3",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.7",
     "react-dom": "^19.0.0",
-    "next": "15.1.3"
+    "react-toastify": "^11.0.2"
   },
   "devDependencies": {
     "postcss": "^8",
